@@ -1,3 +1,5 @@
+msgAttachmentAlreadyExistsOverwrite = The attachment you are trying to add already exists for the current item. Do you want to continue and overwrite the existing attachment?
+msgCouldNotReadAttachment = The selected file could not be read
 msgItemsSelected = %1 items selected
 msgItemSelected = 1 item selected
 msgCompleted = Completed!
