@@ -8,6 +8,9 @@ Data Crow version 4.9.2                       Released on 2023-07-xx
 [New]
 - Attachments can now be added to items. These documents are stored within the Data Crow data set.
 
+[Fixed]
+- Incorrect alignment of the filter label on the related items tab.
+
 TODO:
 - Attachments: security
 - Attachments: max size (1, 2, 5, 10 MB)
